# jsaxonpy

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  makefile  pyproject.toml  setup.py  tox.ini
src/jsaxonpy/: __init__.py  jvm.py  xslt.py
tests/: test_saxon.py  test_saxon_mp.py  test_saxon_threading.py
tests/fixtures/: catalog.xml
